--- a/templates/index.html
+++ b/templates/index.html
@@ -57,6 +57,10 @@
         <input type="text" name="message" placeholder="Enter message here">
         <input type="submit" value="Decode">
     </form>
+    <!-- add an animated monkey -->
+    <img src="https://media.giphy.com/media/LwPL5COt330VW/giphy.gif?cid=790b76113ffunct3c60snw0thy2331992rbgjo1urvmhkv9d&ep=v1_gifs_search&rid=giphy.gif&ct=g" alt="monkey" style="width: 100%; max-width: 500px; margin: 0 auto; display: block;">
+    <p style="text-align: center;">Monkey image from <a href="https://media.giphy.com/media/LwPL5COt330VW/giphy.gif?cid=790b76113ffunct3c60snw0thy2331992rbgjo1urvmhkv9d&ep=v1_gifs_search&rid=giphy.gif&ct=g">Giphy</a></p>
+
 </body>
 
 </html>
